--- a/DeviceInfo.Console/DeviceInfo.Console.csproj
+++ b/DeviceInfo.Console/DeviceInfo.Console.csproj
@@ -7,4 +7,11 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Hardware.Info" Version="100.1.0.1" />
+    </ItemGroup>
+    
+    
+
+
 </Project>
