--- a/DeviceInfo.Console/DeviceInfo.Console.csproj
+++ b/DeviceInfo.Console/DeviceInfo.Console.csproj
@@ -2,16 +2,15 @@
 
     <PropertyGroup>
         <OutputType>Exe</OutputType>
-        <TargetFramework>net8.0</TargetFramework>
+        <OutputType>Exe</OutputType>
+        <TargetFramework>net8.0-windows10.0.19041.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="Hardware.Info" Version="100.1.0.1" />
+        <PackageReference Include="Hardware.Info" Version="100.1.0.1"/>
+        <PackageReference Include="CommunityToolkit.WinUI.Notifications" Version="7.1.2"/>
     </ItemGroup>
-    
-    
-
 
 </Project>
