--- a/DeviceInfo.Console/DeviceInfo.Console.csproj
+++ b/DeviceInfo.Console/DeviceInfo.Console.csproj
@@ -9,6 +9,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="CommandLineParser" Version="2.9.1" />
         <PackageReference Include="Hardware.Info" Version="100.1.0.1"/>
         <PackageReference Include="CommunityToolkit.WinUI.Notifications" Version="7.1.2"/>
     </ItemGroup>
